crates/oxc_react_compiler/tests/snapshots/function-expression-with-store-to-parameter.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/function-expression-with-store-to-parameter.js
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(2);
	const mutate = _temp;
	let x;
	if ($[0] !== props) {
		x = makeObject(props);
		mutate(x);
		$[0] = props;
		$[1] = x;
	} else {
		x = $[1];
	}
	return x;
}
function _temp(object, key, value) {
	object.updated = true;
	object[key] = value;
}
