crates/oxc_react_compiler/tests/snapshots/gating-with-function-outlining.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/gating-with-function-outlining.js
---
import { c as _c } from "react/compiler-runtime";
import { isForgetEnabled_Fixtures } from "ReactForgetFeatureFlag";
// @gating
import { useEffect } from "react";
const Component = isForgetEnabled_Fixtures() ? function Component() {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = [];
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	useEffect(_temp, t0);
	return null;
} : function Component() {
	useEffect(() => {
		console.log("mounted");
	}, []);
	return null;
};
function _temp() {
	console.log("mounted");
}
