crates/oxc_react_compiler/tests/snapshots/global-jsx-tag-lowered-between-mutations.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/global-jsx-tag-lowered-between-mutations.js
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		const maybeMutable = new MaybeMutable();
		t0 = <View>{maybeMutate(maybeMutable)}</View>;
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
