crates/oxc_react_compiler/tests/snapshots/globals-Number.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/globals-Number.js
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(2);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = {};
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	const x = t0;
	const y = Number(x);
	let t1;
	if ($[1] === Symbol.for("react.memo_cache_sentinel")) {
		t1 = [x, y];
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	return t1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
