crates/oxc_react_compiler/tests/snapshots/globals-dont-resolve-local-useState.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/globals-dont-resolve-local-useState.js
---
import { c as _c } from "react/compiler-runtime";
import { useState as _useState, useCallback, useEffect } from "react";
import { ValidateMemoization } from "shared-runtime";
function useState(value) {
	const $ = _c(2);
	const [state, setState] = _useState(value);
	let t0;
	if ($[0] !== state) {
		t0 = [state, setState];
		$[0] = state;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
function Component() {
	const $ = _c(5);
	const [state, setState] = useState("hello");
	let t0;
	if ($[0] !== setState) {
		t0 = () => setState("goodbye");
		$[0] = setState;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	let t1;
	if ($[2] !== state || $[3] !== t0) {
		t1 = <div onClick={t0}>{state}</div>;
		$[2] = state;
		$[3] = t0;
		$[4] = t1;
	} else {
		t1 = $[4];
	}
	return t1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{}]
};
