crates/oxc_react_compiler/tests/snapshots/hir_id_numbering.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/hir_id_numbering.js
---
import { c as _c } from "react/compiler-runtime";
// HIR Pattern: ID_NUMBERING_DIFF (14 files, 4%)
// Identifier IDs diverge (after normalization), with instruction kind changes
// Root cause: async function + try/catch + setTimeout scoping
export default function withRetries() {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = new Promise(_temp);
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
function _temp(resolve, reject) {}
