crates/oxc_react_compiler/tests/snapshots/hir_loc_diff.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/hir_loc_diff.js
---
// HIR Pattern: LOC_DIFF (45 files, 13%)
// Source locations differ + instruction kind differs (LoadGlobal vs DeclareContext)
// Root cause: for-in loop variable scoping handled differently
window.ClientLogger = (function() {})();
